# MicioStudio

./: .gitignore  AGENTS.md  README.md  SPEC.md  rust-toolchain.toml
.atl/: .skill-registry.cache.json  skill-registry.md
app/: Config.swift  Info.plist  MicioStudio.entitlements  project.yml
app/Sources/App/: ContentView.swift  MicioStudioApp.swift  RecordingsLibrary.swift  Soundboard.swift  WebcamPreview.swift
app/Sources/Capture/: AudioCapturer.swift  AudioLevel.swift  CameraCapturer.swift  EventTap.swift  RecordingClock.swift  RecordingCoordinator.swift  ScreenCapturer.swift  ScreenSnapshot.swift
app/Sources/Compositor/: CompositePreview.swift  TemplateRenderer.swift  TemplateVideoExporter.swift
app/Sources/Encoder/: CombinedExporter.swift  SegmentWriter.swift  SideBySideExporter.swift
app/Sources/Permissions/: PermissionManager.swift
app/Sources/Timeline/: TimelineEditorView.swift  TimelineExporter.swift  TimelineModel.swift
core/: Cargo.toml
core/crates/core/: Cargo.toml  uniffi.toml
core/crates/core/src/: error.rs  event_log.rs  lib.rs  library.rs  template.rs  zoom.rs
docs/: PROMPT.md  SESSION-NOTES.md
scripts/: build-core.sh  make-icon.swift  setup-dev-signing.sh  verify-phase1.sh
templates/: .gitkeep
