[package]
name = "micio_core"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "micio_core"
# staticlib: linked into the app. cdylib: read by uniffi-bindgen --library for
# metadata. lib: used by unit tests and the embedded bindgen bin.
crate-type = ["staticlib", "cdylib", "lib"]

# Embedded uniffi-bindgen — always version-locked to the `uniffi` dependency below,
# so there is never a bindgen/runtime version skew. Run via `cargo run --bin uniffi-bindgen`.
[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dependencies]
uniffi = { version = "0.32", features = ["cli"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
